--- a/aspl_company_branch_ee/views/fleet_vehicle_view.xml
+++ b/aspl_company_branch_ee/views/fleet_vehicle_view.xml
@@ -33,9 +33,10 @@
             <field name="model">fleet.vehicle.log.services</field>
             <field name="inherit_id" ref="fleet.fleet_vehicle_log_services_view_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//sheet/group[1]" position="inside">
+                <xpath expr="//field[@name='vendor_id']" position="after">
                     <field name="branch_id" required="1"
-                           groups="aspl_company_branch_ee.group_multi_branches" widget="selection"/>
+                           groups="aspl_company_branch_ee.group_multi_branches"
+                           options="{'no_create':True,'no_edit':True}"/>
                 </xpath>
             </field>
         </record>
