--- a/fleet_custom/views/fleet_extended_view.xml
+++ b/fleet_custom/views/fleet_extended_view.xml
@@ -11,6 +11,7 @@
                 <field name="registration_type"/>
                 <field name="insurance_expiry"/>
                 <field name="registration_expiry"/>
+                <field name="code"/>
             </xpath>
         </field>
     </record>
