--- a/fleet_custom/views/fleet_extended_view.xml
+++ b/fleet_custom/views/fleet_extended_view.xml
@@ -24,6 +24,10 @@
         <field name="model">account.asset</field>
         <field name="inherit_id" ref="account_asset.view_account_asset_form"/>
         <field name="arch" type="xml">
+            <xpath expr="//field[@name='book_value']" position="after">
+                <field name="market_value"
+                           attrs="{'invisible': [('state', '=', 'model')], 'readonly': ['|', ('state','!=','draft'), ('original_move_line_ids', '!=', [])], 'readonly': [('state', '!=', 'draft')]}"/>
+            </xpath>
             <xpath expr="//sheet/group" position="inside">
                 <group string="Additional Info">
                     <field name="model_date"
