[add] fleet link

--- a/bakhroush_custom_report/report/delivery_dotmatrix_report.xml
+++ b/bakhroush_custom_report/report/delivery_dotmatrix_report.xml
@@ -82,7 +82,7 @@
                             <td style="width:35mm;text-align:right;"></td>
 <!--                            Car No.-->
                             <td style="width:30mm;text-align:right;"></td>
-                            <td colspan="2" style="width:67mm;text-align:center;"><span t-field="o.car_no"/></td>
+                            <td colspan="2" style="width:67mm;text-align:center;"><span t-field="o.car_no.license_plate"/></td>
                             <td style="width:30mm;text-align:right;"></td>
                         </tr>
 
