--- a/bakhroush_custom_report/report/delivery_concreate_dotmatrix_report.xml
+++ b/bakhroush_custom_report/report/delivery_concreate_dotmatrix_report.xml
@@ -29,7 +29,7 @@
                     <table style="font-family:Calibri;font-size: 13px;border-collapse: collapse;">
                         <tr style="height:10mm;">
 <!--                            Invoice No.-->
-                            <td style="width:160mm;text-align:right;"><span t-field="o.invoice_no"/></td>
+                            <td style="width:160mm;text-align:center;"><span t-field="o.invoice_no"/></td>
                             <td style="width:40mm;text-align:right;"></td>
 
                             <td style="width:80mm;text-align:center;font-size: 15px;font-weight:bold;"></td>
@@ -39,7 +39,7 @@
                         </tr>
                         <tr style="height:10mm;">
 <!--                            Bulding No.-->
-                            <td style="width:160mm;text-align:right;"><span t-field="o.building_permit_no"/></td>
+                            <td style="width:160mm;text-align:center;"><span t-field="o.building_permit_no"/></td>
                             <td style="width:40mm;text-align:right;"></td>
 
                             <td style="width:80mm;text-align:center;font-size: 15px;font-weight:bold"></td>
@@ -49,7 +49,7 @@
                         </tr>
                         <tr style="height:10mm;">
 <!--                            Mobile No.-->
-                            <td style="width:160mm;text-align:right;"><span t-field="o.type_of_use"/></td>
+                            <td style="width:160mm;text-align:center;"><span t-field="o.type_of_use"/></td>
                             <td style="width:40mm;text-align:right;"></td>
 
                             <td style="width:80mm;text-align:center;font-size: 20px;font-weight:bold"/>
@@ -60,7 +60,7 @@
 
                         <tr style="height:10mm;">
 <!--                            Mixing Time-->
-                            <td style="width:160mm;text-align:right;"><span t-field="o.mixing_time"/></td>
+                            <td style="width:160mm;text-align:center;"><span t-field="o.mixing_time"/></td>
                             <td style="width:35mm;text-align:right;"></td>
 <!--                            Cust. Name-->
                             <td colspan="2" style="width:67mm;text-align:right;"><span t-field="o.partner_id.name"/></td>
@@ -69,7 +69,7 @@
 
                         <tr style="height:10mm;">
 <!--                            Time Out-->
-                            <td style="width:160mm;text-align:right;"><span t-field="o.load_time_mixer"/></td>
+                            <td style="width:160mm;text-align:center;"><span t-field="o.load_time_mixer"/></td>
                             <td style="width:35mm;text-align:right;"></td>
 <!--                            Car No.-->
                             <td colspan="2" style="width:67mm;text-align:right;"><span t-field="o.car_no"/></td>
@@ -78,7 +78,7 @@
 
                         <tr style="height:10mm;">
 <!--                            Received Time-->
-                            <td style="width:160mm;text-align:right;"><span t-field="o.received_time"/></td>
+                            <td style="width:160mm;text-align:center;"><span t-field="o.received_time"/></td>
                             <td style="width:35mm;text-align:right;"></td>
 <!--                            Driver Name-->
                             <td colspan="2" style="width:67mm;text-align:right;"><span t-field="o.driver_name"/></td>
@@ -88,17 +88,17 @@
 
                     <table style="font-family:Calibri;font-size: 13px;border-collapse: collapse;">
                         <tr>
-                            <td style="width:32mm;text-align:right;"><br/><br/><br/><br/></td>
-                            <td style="width:56mm;text-align:right;"><br/><br/><br/><br/></td>
-                            <td style="width:78mm;text-align:right;"><br/><br/><br/><br/></td>
+                            <td style="width:40mm;text-align:right;"><br/><br/><br/><br/></td>
+                            <td style="width:64mm;text-align:right;"><br/><br/><br/><br/></td>
+                            <td style="width:84mm;text-align:right;"><br/><br/><br/><br/></td>
+                            <td style="width:68mm;text-align:right;"><br/><br/><br/><br/></td>
+                            <td style="width:86mm;text-align:right;"><br/><br/><br/><br/></td>
+                            <td style="width:80mm;text-align:right;"><br/><br/><br/><br/></td>
+                            <td style="width:84mm;text-align:right;"><br/><br/><br/><br/></td>
+                            <td style="width:84mm;text-align:right;"><br/><br/><br/><br/></td>
+                            <td style="width:84mm;text-align:right;"><br/><br/><br/><br/></td>
                             <td style="width:60mm;text-align:right;"><br/><br/><br/><br/></td>
-                            <td style="width:78mm;text-align:right;"><br/><br/><br/><br/></td>
-                            <td style="width:74mm;text-align:right;"><br/><br/><br/><br/></td>
-                            <td style="width:78mm;text-align:right;"><br/><br/><br/><br/></td>
-                            <td style="width:78mm;text-align:right;"><br/><br/><br/><br/></td>
-                            <td style="width:78mm;text-align:right;"><br/><br/><br/><br/></td>
-                            <td style="width:54mm;text-align:right;"><br/><br/><br/><br/></td>
-                            <td style="width:54mm;text-align:right;"><br/><br/><br/><br/></td>
+                            <td style="width:60mm;text-align:right;"><br/><br/><br/><br/></td>
                         </tr>
 
                         <tbody>
