--- a/bakhroush_custom_report/report/delivery_report.xml
+++ b/bakhroush_custom_report/report/delivery_report.xml
@@ -4,6 +4,8 @@
         <field name="name">Paperformat Bakhroush 1</field>
         <field name="default" eval="False"/>
         <field name="format">A4</field>
+        <field name="page_height">0</field>
+        <field name="page_width">0</field>
 <!--        <field name="page_height">140</field>-->
 <!--        <field name="page_width">240</field>-->
         <field name="orientation">Portrait</field>
