--- a/saudi_vat_invoice_print/views/invoice.xml
+++ b/saudi_vat_invoice_print/views/invoice.xml
@@ -16,10 +16,17 @@
                     <group>
                         <field name="amount_text"/>
                         <field name="amount_in_ar"/>
+                        <field name="qr_image" widget="image"/>
                     </group>
                 </page>
 
             </xpath>
+<!--            <xpath expr="//form/header/button[@name='button_draft']" position="after">-->
+<!--                <button string="Generate Qrcode" name="sticker_barcode_generator"-->
+<!--                        type="object"-->
+<!--                        attrs="{'invisible': ['|', '|', ('move_type', 'not in', ('out_invoice', 'in_invoice')), ('state', '!=', 'posted'), ('payment_state', 'not in', 'paid')]}"-->
+<!--                        class="oe_highlight"/>-->
+<!--            </xpath>-->
             <xpath expr="//field[@name='line_ids']//field[@name='discount']" position="after">
                 <field name='discount_amount' invisible='1'/>
                 <field name='price_before_discount' invisible='1'/>
@@ -41,13 +48,16 @@
                 <field name="price_before_discount"/>
                 <field name="discount" class="oe_subtotal_footer_separator"/>
             </xpath>
-            <xpath expr="//group[@class='oe_subtotal_footer oe_right']//field[@name='amount_untaxed']" position="attributes">
+            <xpath expr="//group[@class='oe_subtotal_footer oe_right']//field[@name='amount_untaxed']"
+                   position="attributes">
                 <attribute name="string">Total Taxable Amount (Excluding VAT)</attribute>
             </xpath>
-            <xpath expr="//group[@class='oe_subtotal_footer oe_right']//field[@name='amount_by_group']" position="attributes">
+            <xpath expr="//group[@class='oe_subtotal_footer oe_right']//field[@name='amount_by_group']"
+                   position="attributes">
                 <attribute name="string">Total VAT</attribute>
             </xpath>
-            <xpath expr="//group[@class='oe_subtotal_footer oe_right']//field[@name='amount_total']" position="attributes">
+            <xpath expr="//group[@class='oe_subtotal_footer oe_right']//field[@name='amount_total']"
+                   position="attributes">
                 <attribute name="string">Total Amount Due</attribute>
             </xpath>
         </field>
